--- a/index.html
+++ b/index.html
@@ -1141,12 +1141,36 @@
             </div>
             <div class="row">-->
 
+              <div class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
+                <div class="blog blog-style--1">
+                  <div class="thumbnail">
+                    <a><img class="w-100"
+                        src="assets/images/events/carnival2023.png"
+                        style="aspect-ratio: 2 / 3" alt="Radius, June 17th" /></a>
+                    <span class="missed hide"></span>
+                  </div>
+                  <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
+                </div>
+              </div>
+
               <div class="offset-lg-4 offset-md-3 col-lg-4 col-sm-6 col-12 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
-                        src="assets/images/events/july21.openmind.jpg"
-                        style="aspect-ratio: 2 / 3" alt="OpenMind, July 21st" /></a>
+                        src="assets/images/events/aug11.openmind.png"
+                        style="aspect-ratio: 2 / 3" alt="OpenMind, August 11th" /></a>
+                    <span class="missed hide"></span>
+                  </div>
+                  <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 col-sm-6 col-12 d-flex align-items-stretch">
+                <div class="blog blog-style--1">
+                  <div class="thumbnail">
+                    <a><img class="w-100"
+                        src="assets/images/events/aug12.radius.jpg"
+                        style="aspect-ratio: 2 / 3" alt="Radius, August 12th" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
