--- a/index.html
+++ b/index.html
@@ -1169,7 +1169,7 @@
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
-                        src="assets/images/events/aug12.radius.jpg"
+                        src="assets/images/events/aug12.radius.png"
                         style="aspect-ratio: 2 / 3" alt="Radius, August 12th" /></a>
                     <span class="missed hide"></span>
                   </div>
