--- a/index.html
+++ b/index.html
@@ -1153,7 +1153,7 @@
                 </div>
               </div>
 
-              <div class="offset-lg-4 offset-md-3 col-lg-4 col-sm-6 col-12 d-flex align-items-stretch">
+              <div class="offset-md-3 col-lg-4 col-sm-6 col-12 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
