--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
                 </div>
               </div>
             </div>
-            <div class="row">-->
+            <div class="row">
 
               <div class="col-lg-4 col-md-6 col-sm-12 col-12 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
@@ -1163,14 +1163,14 @@
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
                 </div>
-              </div>
+              </div>-->
 
-              <div class="col-lg-4 col-md-6 col-sm-12 col-12 d-flex align-items-stretch">
+              <div class="col-lg-4 col-md-6 col-sm-12 col-12 offset-lg-2 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
-                        src="assets/images/events/aug12.radius.png"
-                        style="aspect-ratio: 2 / 3" alt="Radius, August 12th" /></a>
+                        src="assets/images/events/sep2.radius.png"
+                        style="aspect-ratio: 2 / 3" alt="Radius, September 2nd" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
