--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@
                 </div>
               </div>-->
 
-              <div class="col-lg-4 col-md-6 col-sm-12 col-12 offset-lg-2 d-flex align-items-stretch">
+              <div class="col-lg-4 col-md-6 col-sm-12 col-12 offset-md-3 offset-lg-4 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a><img class="w-100"
