--- a/index.html
+++ b/index.html
@@ -974,11 +974,9 @@
                       <p>
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
-<!--
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-guest-ray-ray-ancestral-house-amapiano-tickets-709202934067" target="_blank">Advance Tickets</a>
                       </p>
--->
                     </div>
                     <div class="col-lg-4 position-relative">
                       <video class="youtube-video" height="680" controls controlsList="nodownload">
@@ -988,25 +986,25 @@
                       <div class="play-button">▶</div>
                     </div>
                     <div class="col-lg-4 text-lg-start">
-                      <h4 class="f-red hide">Upcoming RUUTED</h4>
+                      <h4 class="f-red">Upcoming RUUTED</h4>
                       <div class="details hide">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">May</div>
-                            <div class="day">12<sup>th</sup></div>
+                            <div class="month">Sep</div>
+                            <div class="day">30<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-vinny-gruvhunter-tickets-623349042767" target="_blank">Advance Tickets</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-guest-ray-ray-ancestral-house-amapiano-tickets-709202934067" target="_blank">Advance Tickets</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj hide">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1025,6 +1023,17 @@
                               <ul class="m-0">
                                 <li class="text-uppercase">Ron Jon</li>
                                 <li><a href="https://instagram.com/gruvhunter" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @gruvhunter</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring Ray Ray, remove .hide, and put it on other DJs-->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/ray-ray.png" alt="Ray Ray / djrayray.ca" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <li class="text-uppercase">Ray Ray</li>
+                                <li><a href="https://instagram.com/djrayrayca" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djrayrayca</a></li>
                               </ul>
                             </div>
                           </div>
