--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
                     </div>
                     <div class="col-lg-4 text-lg-start">
                       <h4 class="f-red">Upcoming RUUTED</h4>
-                      <div class="details hide">
+                      <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
                             <div class="month">Sep</div>
