--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@
                             <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-guest-ray-ray-ancestral-house-amapiano-tickets-709202934067" target="_blank">Advance Tickets</a></li>
                           </ul>
                         </div>
-                        <div class="guest-dj hide">
+                        <div class="guest-dj">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
                           <div class="row pb-10 hide">
