--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,7 @@
                               <ul class="m-0">
                                 <li class="text-uppercase">Ray Ray</li>
                                 <li><a href="https://instagram.com/djrayrayca" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djrayrayca</a></li>
+                                <li><a href="https://djrayray.ca" target="_blank"><i class="fab fa-globe" aria-hidden="true"></i> djrayray.ca</a></li>
                               </ul>
                             </div>
                           </div>
