--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
                               <ul class="m-0">
-                                <li class="text-uppercase">Ray Ray</li>
+                                <li class="text-uppercase text-white"><strong>Ray Ray</strong></li>
                                 <li><a href="https://instagram.com/djrayrayca" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djrayrayca</a></li>
                                 <li><a href="https://djrayray.ca" target="_blank"><i class="fab fa-globe" aria-hidden="true"></i> djrayray.ca</a></li>
                               </ul>
