--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                               <ul class="m-0">
                                 <li class="text-uppercase text-white"><strong>Ray Ray</strong></li>
                                 <li><a href="https://instagram.com/djrayrayca" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djrayrayca</a></li>
-                                <li><a href="https://djrayray.ca" target="_blank"><i class="fab fa-globe" aria-hidden="true"></i> djrayray.ca</a></li>
+                                <li><a href="https://djrayray.ca" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i> djrayray.ca</a></li>
                               </ul>
                             </div>
                           </div>
@@ -1179,7 +1179,7 @@
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-guest-ray-ray-ancestral-house-amapiano-tickets-709202934067" target="_blank"><img class="w-100"
-                        src="assets/images/events/sep30.ruuted.jpg"
+                        src="assets/images/events/sep30.ruuted.png"
                         style="aspect-ratio: 2 / 3" alt="Ruuted, September 30th" /></a>
                     <span class="missed hide"></span>
                   </div>
