--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       name="description"
       content="Looking for a professional DJ who can cater to any event and keep the crowd entertained? Look no further than Corey Dawkins! With years of experience and a versatile music library that spans all genres, Corey has the expertise and skill to create the perfect vibe for weddings, corporate events, parties, and more. From sound system setup to customized track lists, Corey delivers top-notch service that ensures your event is a success. Book Corey Dawkins today and get ready to dance the night away!"
     />
-    <meta name="author" content="Andrew St. Bernard, andrewincode > gmail" />
+    <meta name="author" content="GoodCode.ca" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -990,8 +990,8 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Sep</div>
-                            <div class="day">30<sup>th</sup></div>
+                            <div class="month">Nov</div>
+                            <div class="day">10<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
@@ -1004,7 +1004,7 @@
                         <div class="guest-dj">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
-                          <div class="row pb-10 hide">
+                          <div class="row pb-10">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1027,7 +1027,7 @@
                             </div>
                           </div>
                           <!-- If guest starring Ray Ray, remove .hide, and put it on other DJs-->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/ray-ray.png" alt="Ray Ray / djrayray.ca" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
