--- a/index.html
+++ b/index.html
@@ -1178,9 +1178,9 @@
               <div class="col-lg-4 col-md-6 col-sm-12 col-12 offset-md-3 offset-lg-4 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
-                    <a href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-guest-ray-ray-ancestral-house-amapiano-tickets-709202934067" target="_blank"><img class="w-100"
-                        src="assets/images/events/sep30.ruuted.png"
-                        style="aspect-ratio: 2 / 3" alt="Ruuted, September 30th" /></a>
+                    <a href="https://www.eventbrite.com/e/738615006367" target="_blank"><img class="w-100"
+                        src="assets/images/events/nov10.ruuted.png"
+                        style="aspect-ratio: 2 / 3" alt="Ruuted, November 10th" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
