--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
                   <div class="inner text-start">
                     <span>DJ, Producer &amp; Promoter</span>
                     <h1 class="title">I’m <span>Corey Dawkins</span></h1>
-                    {% stastic_fetch type: "header_tagline" %}
-                      <h3>{{ stastic_item }}.</h3>
-                    {% endstastic_fetch %}
+                    <h3>Let's enjoy amazing music together in Toronto!</h3>
                   </div>
                 </div>
               </div>
