--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.com/e/738615006367" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-dj-lazy-e-ancestral-house-amapiano-tickets-764172960897" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,21 +990,21 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Nov</div>
-                            <div class="day">10<sup>th</sup></div>
+                            <div class="month">Dec</div>
+                            <div class="day">8<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.com/e/738615006367" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-dj-lazy-e-ancestral-house-amapiano-tickets-764172960897" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1035,6 +1035,18 @@
                                 <li class="text-uppercase text-white"><strong>Ray Ray</strong></li>
                                 <li><a href="https://instagram.com/djrayrayca" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djrayrayca</a></li>
                                 <li><a href="https://djrayray.ca" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i> djrayray.ca</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring Lazy-E, remove .hide and put it on other DJs -->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/lazy-e.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">DJ Lazy-E</li>
+                                <li><a href="https://instagram.com/djlazye" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @djlazye</a></li>
                               </ul>
                             </div>
                           </div>
@@ -1178,9 +1190,9 @@
               <div class="col-lg-4 col-md-6 col-sm-12 col-12 offset-md-3 offset-lg-4 d-flex align-items-stretch">
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
-                    <a href="https://www.eventbrite.com/e/738615006367" target="_blank"><img class="w-100"
-                        src="assets/images/events/nov10.ruuted.png"
-                        style="aspect-ratio: 2 / 3" alt="Ruuted, November 10th" /></a>
+                    <a href="#" target="_blank"><img class="w-100"
+                        src="assets/images/events/dec16.reggaddition.jpg"
+                        style="aspect-ratio: 2 / 3" alt="Reggaddiction, December 16th" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
