--- a/index.html
+++ b/index.html
@@ -990,15 +990,15 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Dec</div>
-                            <div class="day">8<sup>th</sup></div>
+                            <div class="month">Jan</div>
+                            <div class="day">12<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-dj-lazy-e-ancestral-house-amapiano-tickets-764172960897" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-dj-corey-dawkins-and-dj-2ten-ancestral-house-amapiano-tickets-783519446757" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1039,7 +1039,7 @@
                             </div>
                           </div>
                           <!-- If guest starring Lazy-E, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/lazy-e.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1047,6 +1047,18 @@
                                 <hr class="f-red">
                                 <li class="text-uppercase f-white">DJ Lazy-E</li>
                                 <li><a href="https://instagram.com/djlazye" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @djlazye</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring 2Ten, remove .hide and put it on other DJs -->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/2ten.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">2Ten</li>
+                                <li><a href="https://instagram.com/dj2ten" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @dj2ten</a></li>
                               </ul>
                             </div>
                           </div>
@@ -1153,7 +1165,7 @@
           id="blog"
           style="border-bottom: 1px solid #444"
         >
-          <div class="container">
+          <div class="container hide">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-title section-title--3 text-center mb--30">
