--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-dj-corey-dawkins-and-dj-2ten-ancestral-house-amapiano-tickets-783519446757" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-leo-love-ancestral-house-and-amapiano-tickets-804281155587" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,15 +990,15 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Jan</div>
-                            <div class="day">12<sup>th</sup></div>
+                            <div class="month">Feb</div>
+                            <div class="day">9<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-dj-corey-dawkins-and-dj-2ten-ancestral-house-amapiano-tickets-783519446757" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-leo-love-ancestral-house-and-amapiano-tickets-804281155587" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1051,7 +1051,7 @@
                             </div>
                           </div>
                           <!-- If guest starring 2Ten, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/2ten.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1059,6 +1059,18 @@
                                 <hr class="f-red">
                                 <li class="text-uppercase f-white">2Ten</li>
                                 <li><a href="https://instagram.com/dj2ten" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @dj2ten</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring Leo Love, remove .hide and put it on other DJs -->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/leo-love.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">Leo Love</li>
+                                <li><a href="https://instagram.com/leo_love74" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @leo_love74</a></li>
                               </ul>
                             </div>
                           </div>
@@ -1203,8 +1215,8 @@
                 <div class="blog blog-style--1">
                   <div class="thumbnail">
                     <a href="#" target="_blank"><img class="w-100"
-                        src="assets/images/events/dec16.reggaddition.jpg"
-                        style="aspect-ratio: 2 / 3" alt="Reggaddiction, December 16th" /></a>
+                        src="assets/images/events/feb9.ruuted.jpg"
+                        style="aspect-ratio: 2 / 3" alt="Ruuted, February 9th" /></a>
                     <span class="missed hide"></span>
                   </div>
                   <div class="content"><p class="blogtype">&nbsp;</p><h4 class="title">&nbsp;</h4></div>
