--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-leo-love-ancestral-house-and-amapiano-tickets-804281155587" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-vinny-gruvhunter-house-and-amapiano-tickets-847118443067" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,21 +990,21 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Feb</div>
-                            <div class="day">9<sup>th</sup></div>
+                            <div class="month">Mar</div>
+                            <div class="day">8<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-leo-love-ancestral-house-and-amapiano-tickets-804281155587" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-vinny-gruvhunter-house-and-amapiano-tickets-847118443067" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
-                          <div class="row pb-10 hide">
+                          <div class="row pb-10">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1063,7 +1063,7 @@
                             </div>
                           </div>
                           <!-- If guest starring Leo Love, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/leo-love.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1088,7 +1088,7 @@
 
         <!-- Start Portfolio Area  -->
         <div
-          class="rn-portfolio-area rn-section-gap bg_color--5"
+          class="rn-portfolio-area rn-section-gap bg_color--5 hide"
           id="portfolio"
           style="border-bottom: 1px solid #444"
         >
