--- a/index.html
+++ b/index.html
@@ -1088,11 +1088,11 @@
 
         <!-- Start Portfolio Area  -->
         <div
-          class="rn-portfolio-area rn-section-gap bg_color--5 hide"
+          class="rn-portfolio-area rn-section-gap bg_color--5"
           id="portfolio"
           style="border-bottom: 1px solid #444"
         >
-          <div class="container">
+          <div class="container hide">
             <div class="row">
               <div class="col-lg-12">
                 <div class="section-title section-title--3 text-center mb--30">
