--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@
         <div
           class="rn-contact-area rn-section-gap bg_color--5"
           id="contact"
-          style="border-bottom: 1px solid #f9004d"
+          style="border-bottom: 1px solid transparent <!--#f9004d-->"
         >
           <div class="contact-form--1">
             <div class="container">
