--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-vinny-gruvhunter-house-and-amapiano-tickets-847118443067" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-866703823467" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,8 +990,8 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Mar</div>
-                            <div class="day">8<sup>th</sup></div>
+                            <div class="month">Apr</div>
+                            <div class="day">12<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
@@ -1004,7 +1004,7 @@
                         <div class="guest-dj">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1016,13 +1016,13 @@
                             </div>
                           </div>
                           <!-- If guest starring Ron, remove .hide, and put it on other DJs-->
-                          <div class="row pb-10 hide">
-                            <div class="col-5"><img class="w-100" src="assets/images/team/ron-jon.jpg" alt="" /></div>
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/ron-jon.jpg" alt="DJ Ron Jon on Instagram" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
                               <ul class="m-0">
                                 <li class="text-uppercase">Ron Jon</li>
-                                <li><a href="https://instagram.com/gruvhunter" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @gruvhunter</a></li>
+                                <li><a href="https://instagram.com/djronjon" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i> @djronjon</a></li>
                               </ul>
                             </div>
                           </div>
