--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-866703823467" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-2ten-tickets-884576320587?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,15 +990,15 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Apr</div>
-                            <div class="day">12<sup>th</sup></div>
+                            <div class="month">May</div>
+                            <div class="day">10<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-ron-jon-tickets-866703823467" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-2ten-tickets-884576320587?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
@@ -1016,7 +1016,7 @@
                             </div>
                           </div>
                           <!-- If guest starring Ron, remove .hide, and put it on other DJs-->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/ron-jon.jpg" alt="DJ Ron Jon on Instagram" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1051,7 +1051,7 @@
                             </div>
                           </div>
                           <!-- If guest starring 2Ten, remove .hide and put it on other DJs -->
-                          <div class="row pb-10 hide">
+                          <div class="row pb-10">
                             <div class="col-5"><img class="w-100" src="assets/images/team/2ten.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
