--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                         Come enjoy what <strong class="f-red">RUUTED</strong> has to offer, and let's share it with the world!
                       </p>
                       <p class="mb--20">
-                        <a class="rn-btn mt--10" href="https://www.eventbrite.com/e/994027471927?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
+                        <a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-gene-king-tickets-1023029848817?aff=oddtdtcreator" target="_blank">Advance Tickets</a>
                       </p>
                     </div>
                     <div class="col-lg-4 position-relative">
@@ -990,21 +990,21 @@
                       <div class="details">
                         <div class="info">
                           <div class="date position-absolute">
-                            <div class="month">Sept</div>
-                            <div class="day">13<sup>th</sup></div>
+                            <div class="month">Oct</div>
+                            <div class="day">11<sup>th</sup></div>
                           </div>
                           <ul>
                             <li class="strong">Friday, 10:00 pm</li>
                             <li class="venue strong">Junction Underground</li>
                             <li>2907 Dundas Street West, Toronto</li>
                             <li class="price strong">$15 <em>at the door</em></li>
-                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.com/e/994027471927?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
+                            <li><a class="rn-btn mt--10" href="https://www.eventbrite.ca/e/ruuted-with-corey-dawkins-and-gene-king-tickets-1023029848817?aff=oddtdtcreator" target="_blank">Get Tickets!</a></li>
                           </ul>
                         </div>
                         <div class="guest-dj">
                           <hr>
                           <!-- If guest starring Vinny, remove .hide and put it on other DJs -->
-                          <div class="row pb-10">
+                          <div class="row pb-10 hide">
                             <div class="col-5"><img class="w-100" src="assets/images/team/vinny-gruvhunter.jpg" alt="" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
@@ -1059,6 +1059,18 @@
                                 <hr class="f-red">
                                 <li class="text-uppercase f-white">2Ten</li>
                                 <li><a href="https://instagram.com/dj2ten" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @dj2ten</a></li>
+                              </ul>
+                            </div>
+                          </div>
+                          <!-- If guest starring Gene King, remove .hide and put it on other DJs -->
+                          <div class="row pb-10">
+                            <div class="col-5"><img class="w-100" src="assets/images/team/gene-king.jpg" alt="" /></div>
+                            <div class="col-7 text-start">
+                              <h6 class="f-inherit">Guest starring</h6>
+                              <ul class="m-0">
+                                <hr class="f-red">
+                                <li class="text-uppercase f-white">Gene King</li>
+                                <li><a href="https://instagram.com/shines_records" target="_blank" class="f-yellow"><i class="fab fa-instagram" aria-hidden="true"></i> @shines_records</a></li>
                               </ul>
                             </div>
                           </div>
