--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
                           </div>
                           <!-- If guest starring Gene King, remove .hide and put it on other DJs -->
                           <div class="row pb-10">
-                            <div class="col-5"><img class="w-100" src="assets/images/team/gene-king.jpg" alt="" /></div>
+                            <div class="col-5"><img class="w-100" src="assets/images/team/gene-king.png" alt="Gene King" /></div>
                             <div class="col-7 text-start">
                               <h6 class="f-inherit">Guest starring</h6>
                               <ul class="m-0">
